--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="#about">About</a>
           <a href="#projects">Projects</a>
           <a href="#contact">Contact</a>
-          <a href="cv.pdf">CV</a>
+          <a href="cv.pdf" download>CV</a>
         </nav>
       </header>
 
