--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="#about">About</a>
           <a href="#projects">Projects</a>
           <a href="#contact">Contact</a>
-          <a href="CV.pdf" target="_blank" download>CV</a>
+          <a href="CV.pdf" class="active" target="_blank" download >CV</a>
         </nav>
       </header>
 
