--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="about-card">
         <h4>About Aaron</h4>
         <p>Hi, I'm Aaron, a 21-year-old Computer Science student in my third year of college. </p>
-        <p> From young I have always been surrounded technology, growing up with multiple gaming consoles sparking my interest in tech. </p>
+        <p> From a young age I have always been surrounded technology, growing up with multiple gaming consoles sparking my interest in tech. </p>
         <p>Throughout my academic journey, I've maintained strong self-discipline and work ethic, balancing assignments, part-time work, and going to the gym.</p>
         <p>In my free time, I enjoy watching movies, gaming, listening to music, travelling and socializing with friends.</p>
     </div>
